# hypergal

./: README.md  setup.cfg  setup.py
hypergal/: __init__.py  fit.py  hypergal.py
hypergal/scene/: basics.py
hypergal/script/: hg_run.py  hg_run.sh
hypergal/spectroscopy/: sedfitting.py  utils.py
hypergal/utils/: geometry.py  plot.py
