[metadata]
name = hypergal
version = attr: hypergal.__version__
description = Python module for Host modeling
long_description = Python module for Hyperspectral Galaxy Modeling through SEDfitting and photometric source
long_description_content_type = text/x-rst
author = Jeremy Lezmy, Mickael Rigault
author_email = m.rigault@ipnl.in2p3.fr
license = Apache Software License
license_files = LICENSE
url = https://github.com/MickaelRigault/hypergal
keywords = astronomy, astrophysics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10
install_requires =

    # basic
    numpy
    pandas
    scipy
    matplotlib

    # fitting
    iminuit>=2.30.1
    
    # processing
    dask[distributed]
    pathos # may be removed
    tables
    pyarrow

    # geometries
    shapely>=2.0
    geopandas    

    # Astro
    astropy
    sncosmo
    sep
    pcigale
    
    # internal
    pyifu>=0.13.0
    ztfquery
    pysedm>=0.41.0
    psfcube
    astrobject>=0.11.0
#    pylephare
    

scripts =
	hypergal/scripts/FullProcess.py
	hypergal/script/run_hypergal.py
	hypergal/script/hg_run.py
	hypergal/script/run_hypergal.sh
    
[options.package_data]
hypergal = data/filters/*
	   data/simulation/**/*
	   config/cigale.json
	   

[options.extras_require]
docs = nbsphinx
tests = pytest; coverage

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
